--- a/creational/builder/pom.xml
+++ b/creational/builder/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>mbd.java.example.pattern</groupId>
-    <artifactId>factory-method</artifactId>
+    <artifactId>builder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,7 +13,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <junit-jupiter.version>5.5.2</junit-jupiter.version>
         <system-lambda.version>1.2.1</system-lambda.version>
-        <app.main.class>factory.FactoryDemo</app.main.class>
+        <app.main.class>builder.BuilderDemo</app.main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -93,4 +93,5 @@
 
         </plugins>
     </build>
+
 </project>
